--- a/styles.css
+++ b/styles.css
@@ -135,7 +135,8 @@ p {
 @media screen and (max-width: 330px) and (orientation:portrait){
          
      main {
-             height: 100%;
+             height: 50%;
+             width: 50%;
      }
 
 }
@@ -144,5 +145,6 @@ p {
    
    main {
            height: 50%;
+           width: 50%;
    }
 }
